PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: If a OB upload fails with system logs, try again without system logs

Phoronix Test Suite 7.2.0 Milestone 3
26 May 2017

pts-core: Result parser fixes for some advanced corner cases
pts-core: Add dump-file-info helper
phodevi: Fallback for being able to read I/O scheduler on NVMe device on Linux
phodevi: Monitor *DEBUG* environment variables
pts_Graph: Key alignment spacing fix
pts_Graph: Don't allow duplicate identifiers
pts_Graph: Various other alignment tweaks
phoromatic: Handling for non-PCNTL support in Phoromatic client

Phoronix Test Suite 7.2.0 Milestone 2
4 May 2017

pts-core: Add SKIP_TESTS_HAVING_ARGS environment variable
pts-core: Parser improvements
perf_per_dollar: Allow custom units, report on LIB graphs too
phodevi: Add PGI compiler detection

Phoronix Test Suite 7.2.0 Milestone 1
14 April 2017

pts-core: Result parser improvements
pts-core: Add AppendToArgumentsDescription option to result parser capabilities
system_monitor: Fix for when individual monitoring is disabled
phodevi: Fix for listing dual 4K displays and other select multi-monitor configurations

Phoronix Test Suite 7.0.1
28 March 2017

pts-core: Support for network proxies with username/password requirement
pts-core: Improve formatting of text in 'info' sub-command
phodevi: Improved detection for Quill AArch64 board and possibly other boards
phodevi: Various sensor detection improvements for the Jetson TX2
phodevi: Add fallback detection for ARM Mali
report_test_run_times: Add INSTALL_TIMES_ARE_A_BENCHMARK=1 option for generating install time graphs
report_test_run_times: Add INSTALL_SIZES_ARE_A_BENCHMARK=1 option for generating install size graphs

Phoronix Test Suite 7.0.0-Ringsaker
6 March 2017

pts-core: Make the AppStream meta data happy
pts-core: Improve formatting of PDF generation on large result files
phodevi: Expand GCC version detection when -dumpversion isn't supported (e.g. gcc-snapshot of gcc 7.0.1)
